--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Main User Page</title>
+    <title>Home</title>
 </head>
 <body>
-    <h1>Users</h1>
-    <a href="adduser.html">Link to add users</a> <!--ADDED - Add User-->
-    <br>
-    <div id="users-container"></div>
-    <script src="js/script.js"></script>
+    <h1>Homepage</h1>
+    <a href="/login">Login to site</a>
 </body>
 </html>
