week 4 day 2 login complete

--- a/public/users.html
+++ b/public/users.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <h1>Users</h1>
-    <a href="adduser.html">Link to add users</a> <!--ADDED - Add User-->
+    <a href="adduser.html">Link to add users</a><br> <!--ADDED - Add User-->
+    <a href="/logout">Logout</a> <!--ADDED - Logout-->
     <br>
     <div id="users-container"></div>
     <script src="js/script.js"></script>
